chore: api docs & build update
