# src/controllers/api-docs.controller.ts
@@ -1,5 +1,0 @@
-import Router from "koa-router";
-
-export const apiDocsController = new Router({ prefix: "/api-docs" });
-
-apiDocsController.get("/", (ctx, next) => {});
