# src/controllers/users.controller.ts
@@ -1,11 +1,19 @@
 import Router from "koa-router";
 
-export const usersController = new Router({ prefix: "users" });
+export const usersController = new Router({ prefix: "/users" });
 
-usersController.post("/register", (ctx, next) => {});
+usersController.post("/register", (ctx, next) => {
+  // #swagger.tags = ['Users']
+});
 
-usersController.post("/login", (ctx, next) => {});
+usersController.post("/login", (ctx, next) => {
+  // #swagger.tags = ['Users']
+});
 
-usersController.get("/me", (ctx, next) => {});
+usersController.get("/me", (ctx, next) => {
+  // #swagger.tags = ['Users']
+});
 
-usersController.put("/put/:id/role", (ctx, next) => {});
+usersController.put("/put/:id/role", (ctx, next) => {
+  // #swagger.tags = ['Users']
+});
