# src/main.ts
@@ -1,23 +1,13 @@
 import Koa from "koa";
-// import specs from "src/swagger/swagger.json";
-import { koaSwagger } from "koa2-swagger-ui";
-import Router from "koa-router";
 
-import { booksController } from "@/controllers/books.controller";
-
-const specs = require("@/swagger/swagger.json");
-
-console.log(process.env.TEST);
+import { apiController } from "@/controllers/api.controller";
+import { configService } from "@/services/config.service";
+import { logger } from "@/util/logger";
+import bodyParser from "koa-bodyparser";
 
 const app = new Koa();
 
-app.use(booksController.routes());
-
-const router = new Router({ prefix: "/" });
-router.get(
-  "api-docs",
-  koaSwagger({ routePrefix: false, swaggerOptions: { spec: specs } }),
-);
-
-app.use(router.routes());
-app.listen(3030, "localhost");
+app.use(bodyParser());
+app.use(apiController.routes());
+app.listen(configService.PORT, configService.HOST);
+logger.info(`App started in ${configService.APP_URL}`);
